# PolyFollow

./: .env.example  .gitignore  10_DIMENSIONAL_ASSESSMENT.md  CLAUDE.md  PROJECT_PROMOT_PHASE1-2.md  README.md  TODO_LIST.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: account.py  leaderboard.py
backend/app/core/: config.py  redis.py  redis_queue.py
backend/app/schemas/: schemas.py  task.py
backend/app/services/: __init__.py  account_service.py  base.py  blockchain.py  position_enricher.py  scoring_service.py
backend/app/services/auth/: __init__.py  base.py  bridge_client.py  rebates_client.py  relayer_client.py  rewards_client.py  trade_client.py  wallet.py
backend/app/services/clob/: __init__.py  client.py  sdk_client.py
backend/app/services/data/: __init__.py  client.py
backend/app/services/gamma/: __init__.py  client.py
backend/app/services/websocket/: __init__.py  client.py
backend/tests/: test_account_service.py  test_base_client.py  test_blockchain.py  test_data_client.py  test_gamma_client.py  test_position_enricher.py  test_redis.py  test_redis_queue.py  test_scoring_service.py  test_wallet.py
frontend/: components.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/leaderboard/: page.tsx
frontend/components/leaderboard/: index.ts  leaderboard-table.tsx  score-badge.tsx
frontend/components/profile/: activity-list.tsx  address-header.tsx  index.ts  (+1 more)
frontend/lib/: api.ts  supabase.ts
frontend/prisma/: schema.prisma
(+4 files in other folders)
